samples/_failures_safe/1761797167_59527b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_592840c0.c: In function ‘main’:
./samples/SAFE/__tmp_592840c0.c:136:9: error: expected expression at end of input
  136 |         for (size_t j = 0;
      |         ^~~
./samples/SAFE/__tmp_592840c0.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_592840c0.c:136:9: error: expected declaration or statement at end of input
